--- a/plugins/eg-amp.lv2/manifest.ttl.in
+++ b/plugins/eg-amp.lv2/manifest.ttl.in
@@ -23,7 +23,7 @@
 
 <http://lv2plug.in/plugins/eg-amp>
 	a lv2:Plugin ;
-	lv2:binary <amp.so>  ;
+	lv2:binary <amp@LIB_EXT@>  ;
 	rdfs:seeAlso <amp.ttl> .
 
 # Explanation
