--- a/plugins/eg04-sampler.lv2/manifest.ttl.in
+++ b/plugins/eg04-sampler.lv2/manifest.ttl.in
@@ -1,3 +1,9 @@
+# Unlike the previous examples, this manifest lists more than one resource: the
+# plugin as usual, and the UI.  The descriptions are similar, but have
+# different types, so the host can decide from this file alone whether or not
+# it is interested, and avoid following the `rdfs:seeAlso` link if not (though
+# in this case both are described in the same file).
+
 @prefix lv2:  <http://lv2plug.in/ns/lv2core#> .
 @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
 @prefix ui:   <http://lv2plug.in/ns/extensions/ui#> .
