--- a/plugins/eg01-amp.lv2/manifest.ttl.in
+++ b/plugins/eg01-amp.lv2/manifest.ttl.in
@@ -1,27 +1,27 @@
-# LV2 Bundle Manifest
+# ==== Bundles ====
 #
-# All LV2 plugins are installed as "bundles", a directory with a particular
-# format.  Inside the bundle, the entry point is a file called "manifest.ttl".
-# This file lists what plugins are in this bundle, and which files are (.so,
-# .ttl, etc.) are associated with those plugins.
+# LV2 plugins are installed in ``bundles'', a directory with a particular
+# format.  Inside the bundle, the entry point is a file called `manifest.ttl`.
+# The manifest lists the plugins (or other resources) that are in this bundle,
+# and the files that contain further information.
 #
-# Hosts read bundles' manifest.ttl to discover what plugins (and other
-# resources) are available.  Manifest files should be as small as possible for
-# performance reasons.
+# Hosts typically read the `manifest.ttl` of every bundle when starting up to
+# discover what LV2 plugins and other resources are present.  Accordingly,
+# manifest files should be as small as possible for performance reasons.
 #
 #
 # ==== Namespace Prefixes ====
 #
-# Turtle files contain many URIs.  To make this more readable, prefixes
-# can be defined.  For example, with the `lv2:` prefix below, instead of
+# Turtle files contain many URIs.  To make this more readable, prefixes can be
+# defined.  For example, with the `lv2:` prefix below, instead of
 # <http://lv2plug.in/ns/lv2core#Plugin> the shorter form `lv2:Plugin` can be
-# used.  This is just a shorthand for URIs within a file, the prefixes are not
-# significant otherwise.
+# used.  This is just a shorthand for URIs within one file, the prefixes are
+# not significant otherwise.
 
 @prefix lv2:  <http://lv2plug.in/ns/lv2core#> .
 @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
 
-# ==== Data ====
+# ==== A Plugin Entry ====
 
 <http://lv2plug.in/plugins/eg-amp>
 	a lv2:Plugin ;
@@ -36,8 +36,8 @@
 # For reability, the following text will assume `.so` is the extension used.
 #
 # In short, this declares that the resource with URI
-# "http://lv2plug.in/plugins/eg-amp" is an LV2 plugin, with executable code in
-# the file "amp.so" and a full description in "amp.ttl".  These paths are
+# `http://lv2plug.in/plugins/eg-amp` is an LV2 plugin, with executable code in
+# the file `amp.so` and a full description in `amp.ttl`.  These paths are
 # relative to the bundle directory.
 #
 # There are 3 statements in this description:
