eg-sampler: Add resampling via libsamplerate

--- a/plugins/eg-sampler.lv2/meson.build
+++ b/plugins/eg-sampler.lv2/meson.build
@@ -5,16 +5,20 @@ plugin_sources = files('sampler.c')
 bundle_name = 'eg-sampler.lv2'
 data_filenames = ['manifest.ttl.in', 'sampler.ttl', 'click.wav']
 
+samplerate_dep = dependency('samplerate',
+                            version: '>= 0.1.0',
+                            required: get_option('plugins'))
+
 sndfile_dep = dependency('sndfile',
                          version: '>= 1.0.0',
                          required: get_option('plugins'))
 
-if sndfile_dep.found()
+if samplerate_dep.found() and sndfile_dep.found()
   module = shared_library(
     'sampler',
     plugin_sources,
     c_args: c_suppressions,
-    dependencies: [lv2_dep, m_dep, sndfile_dep],
+    dependencies: [lv2_dep, m_dep, samplerate_dep, sndfile_dep],
     gnu_symbol_visibility: 'hidden',
     install: true,
     install_dir: lv2dir / bundle_name,
