Rearrange source tree to be directly usable by dependants
This allows the LV2 source distribution to be used as an include path for
compilers and an LV2_PATH for applications, at the expense of self-contained
bundles.  That's a nice idea, but it made LV2 itself weird and annoying to
depend on.  This rearranges things so that directories in the source tree
correspond more closely to installation directories.

To make this possible, the "aux" directory in the documentation output has been
changed to "style", to avoid the reserved name "aux" on Windows.

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -68,9 +68,9 @@ if not get_option('docs').disabled()
       build_by_default: true,
       command: [
         asciidoc,
-        '-a', 'stylesdir=' + lv2_source_root / 'doc',
+        '-a', 'stylesdir=' + lv2_source_root / 'doc' / 'style',
         '-a', 'source-highlighter=pygments',
-        '-a', 'pygments-style=' + lv2_source_root / 'doc' / 'style.css',
+        '-a', 'pygments-style=' + lv2_source_root / 'doc' / 'style' / 'style.css',
         '-b', 'html',
         '-o', '@OUTPUT@',
         '@INPUT@',
