Fix missing example plugin UI binaries

--- a/plugins/eg-scope.lv2/meson.build
+++ b/plugins/eg-scope.lv2/meson.build
@@ -2,8 +2,14 @@
 # SPDX-License-Identifier: CC0-1.0 OR ISC
 
 plugin_sources = files('examploscope.c')
+ui_sources = files('examploscope_ui.c')
 bundle_name = 'eg-scope.lv2'
 data_filenames = ['manifest.ttl.in', 'examploscope.ttl.in']
+
+gtk2_dep = dependency('gtk+-2.0',
+                      include_type: 'system',
+                      required: get_option('plugins'),
+                      version: '>= 2.18.0')
 
 module = shared_library(
   'examploscope',
@@ -39,3 +45,16 @@ foreach filename : data_filenames
     )
   endif
 endforeach
+
+if gtk2_dep.found()
+  shared_library(
+    'examploscope_ui',
+    ui_sources,
+    c_args: c_suppressions,
+    dependencies: [lv2_dep, gtk2_dep],
+    gnu_symbol_visibility: 'hidden',
+    install: true,
+    install_dir: lv2dir / bundle_name,
+    name_prefix: '',
+  )
+endif
