Use "system" include type for all dependencies
Things get confused when these flags differ across projects, so universally use
"system" for external dependencies.

--- a/plugins/eg-sampler.lv2/meson.build
+++ b/plugins/eg-sampler.lv2/meson.build
@@ -8,12 +8,14 @@ data_filenames = ['manifest.ttl.in', 'sampler.ttl', 'click.wav']
 
 samplerate_dep = dependency(
   'samplerate',
+  include_type: 'system',
   required: get_option('plugins'),
   version: '>= 0.1.0',
 )
 
 sndfile_dep = dependency(
   'sndfile',
+  include_type: 'system',
   required: get_option('plugins'),
   version: '>= 1.0.0',
 )
