Disable meson implicit include directories anti-feature

--- a/plugins/eg-sampler.lv2/meson.build
+++ b/plugins/eg-sampler.lv2/meson.build
@@ -34,6 +34,7 @@ if samplerate_dep.found() and sndfile_dep.found()
     c_args: c_suppressions,
     dependencies: [lv2_dep, m_dep, samplerate_dep, sndfile_dep],
     gnu_symbol_visibility: 'hidden',
+    implicit_include_directories: false,
     install: true,
     install_dir: lv2dir / bundle_name,
     name_prefix: '',
@@ -72,6 +73,7 @@ if samplerate_dep.found() and sndfile_dep.found()
       c_args: ui_suppressions,
       dependencies: [lv2_dep, gtk2_dep],
       gnu_symbol_visibility: 'hidden',
+      implicit_include_directories: false,
       install: true,
       install_dir: lv2dir / bundle_name,
       name_prefix: '',
