--- a/plugins/eg-scope.lv2/meson.build
+++ b/plugins/eg-scope.lv2/meson.build
@@ -19,6 +19,7 @@ module = shared_library(
   c_args: c_suppressions,
   dependencies: [lv2_dep, m_dep],
   gnu_symbol_visibility: 'hidden',
+  implicit_include_directories: false,
   install: true,
   install_dir: lv2dir / bundle_name,
   name_prefix: '',
@@ -55,6 +56,7 @@ if gtk2_dep.found()
     c_args: c_suppressions,
     dependencies: [lv2_dep, gtk2_dep],
     gnu_symbol_visibility: 'hidden',
+    implicit_include_directories: false,
     install: true,
     install_dir: lv2dir / bundle_name,
     name_prefix: '',
