Add independent build system
This marks the start of lv2-examples as a separate project.  The history of
this repository prior to this commit can't be built independently since it was
stripped out of "lv2".

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -63,14 +63,15 @@ if not get_option('docs').disabled()
     )
 
     # Run asciidoc to generate book.html
+    style_dir = lv2_examples_source_root / 'doc' / 'style'
     book_html = custom_target(
       'book.html',
       build_by_default: true,
       command: [
         asciidoc,
-        '-a', 'stylesdir=' + lv2_source_root / 'doc' / 'style',
+        '-a', 'stylesdir=' + style_dir,
         '-a', 'source-highlighter=pygments',
-        '-a', 'pygments-style=' + lv2_source_root / 'doc' / 'style' / 'style.css',
+        '-a', 'pygments-style=' + style_dir / 'style.css',
         '-b', 'html',
         '-o', '@OUTPUT@',
         '@INPUT@',
