--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,16 +4,16 @@
 option('docs', type: 'feature',
        description: 'Build documentation')
 
-option('lint', type: 'boolean', value: false, yield: true,
+option('lint', type: 'boolean', value: false,
        description: 'Run code quality checks')
 
-option('lv2dir', type: 'string', value: '', yield: true,
+option('lv2dir', type: 'string', value: '',
        description: 'LV2 bundle installation directory')
 
-option('plugins', type: 'feature', yield: true,
+option('plugins', type: 'feature',
        description: 'Build example plugins')
 
-option('tests', type: 'feature', yield: true,
+option('tests', type: 'feature',
        description: 'Build tests')
 
 option('title', type: 'string', value: 'LV2 Examples',
