Ignore wraplock file added in meson 1.9.0

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@
 
 /.meson-subproject-wrap-hash.txt
 /build/
-/subprojects/packagecache/
+/subprojects/.wraplock
 /subprojects/lv2/
+/subprojects/packagecache/
